--- a/package.json
+++ b/package.json
@@ -1,40 +1,43 @@
 {
-  "name": "gatsby-starter-blog",
-  "description": "Starter Gatsby Blog",
+  "name": "blog",
+  "description": "Personal Blog build with Gatsby",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Evan Ye <jigsaw.ye@gmail.com> (https://jigsawye.com)",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
+    "url": "https://github.com/jigsawye/beta/issues"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
+    "disqus-react": "^1.0.5",
     "font-awesome": "^4.7.0",
-    "gatsby": "^1.9.250",
-    "gatsby-link": "^1.6.39",
-    "gatsby-plugin-feed": "^1.3.20",
-    "gatsby-plugin-google-analytics": "^1.0.29",
-    "gatsby-plugin-offline": "^1.0.15",
+    "gatsby": "^1.9.270",
+    "gatsby-link": "^1.6.44",
+    "gatsby-plugin-feed": "^1.3.24",
+    "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-offline": "^1.0.18",
     "gatsby-plugin-react-helmet": "^2.0.11",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.26",
-    "gatsby-plugin-sharp": "^1.6.42",
+    "gatsby-plugin-sharp": "^1.6.47",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-plugin-typography": "^1.7.18",
-    "gatsby-remark-autolink-headers": "^1.4.17",
-    "gatsby-remark-copy-linked-files": "^1.5.31",
-    "gatsby-remark-images": "^1.5.61",
-    "gatsby-remark-prismjs": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^1.4.18",
+    "gatsby-remark-autolink-headers": "^1.4.18",
+    "gatsby-remark-copy-linked-files": "^1.5.35",
+    "gatsby-remark-images": "^1.5.66",
+    "gatsby-remark-prismjs": "^2.0.3",
+    "gatsby-remark-responsive-iframe": "^1.4.19",
     "gatsby-remark-smartypants": "^1.4.12",
-    "gatsby-source-filesystem": "^1.5.31",
-    "gatsby-transformer-remark": "^1.7.40",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby-source-filesystem": "^1.5.38",
+    "gatsby-transformer-remark": "^1.7.42",
+    "gatsby-transformer-sharp": "^1.6.26",
+    "javascript-time-ago": "^1.0.30",
     "lodash": "^4.17.5",
     "prismjs": "^1.14.0",
-    "react": "^16.3.2",
+    "react": "^16.4.0",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^3.3.0",
-    "styled-components": "^3.2.6"
+    "react-markdown": "^3.3.2",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -47,7 +50,7 @@
     "gh-pages": "^1.1.0",
     "prettier": "^1.12.0"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://beta.jigsawye.com",
   "keywords": [
     "gatsby"
   ],
@@ -55,7 +58,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/jigsawye/beta.git"
   },
   "scripts": {
     "dev": "gatsby develop",
