--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "gatsby-transformer-remark": "^1.7.42",
     "javascript-time-ago": "^1.0.30",
     "prismjs": "^1.14.0",
-    "react": "^16.4.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.3.2",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-yoctol": "^0.16.1",
