--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "author": "Evan Ye <jigsaw.ye@gmail.com> (https://jigsawye.com)",
   "bugs": {
-    "url": "https://github.com/jigsawye/beta/issues"
+    "url": "https://github.com/jigsawye/blog/issues"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
@@ -39,7 +39,7 @@
     "gh-pages": "^1.1.0",
     "prettier": "^1.12.0"
   },
-  "homepage": "https://beta.jigsawye.com",
+  "homepage": "https://jigsawye.com",
   "keywords": [
     "gatsby"
   ],
@@ -47,16 +47,14 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jigsawye/beta.git"
+    "url": "git+https://github.com/jigsawye/blog.git"
   },
   "scripts": {
     "dev": "gatsby develop",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "deploy": "gatsby build && gh-pages -b master -d public",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
+    "deploy": "gatsby build && gh-pages -b master -d public"
   }
 }
