--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 
 node_js:
-  - "8"
-  - "10"
+  - '10'
 
 script:
-  - npm install
-  - npm run lint
+  - yarn
+  - yarn run lint
