--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
   },
   "dependencies": {
     "disqus-react": "^1.0.5",
-    "gatsby": "^1.9.270",
-    "gatsby-link": "^1.6.44",
-    "gatsby-plugin-feed": "^1.3.24",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-remark-autolink-headers": "^1.4.18",
-    "gatsby-remark-prismjs": "^2.0.3",
-    "gatsby-source-filesystem": "^1.5.38",
-    "gatsby-transformer-remark": "^1.7.42",
+    "gatsby": "next",
+    "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sitemap": "^2.0.0-beta.3",
+    "gatsby-plugin-styled-components": "next",
+    "gatsby-remark-autolink-headers": "next",
+    "gatsby-remark-prismjs": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
     "javascript-time-ago": "^1.0.31",
     "prismjs": "^1.15.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.4.1",
     "styled-components": "^3.4.2"
