chore: bump deps

--- a/package.json
+++ b/package.json
@@ -8,36 +8,37 @@
   },
   "dependencies": {
     "disqus-react": "^1.0.5",
-    "gatsby": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sitemap": "^2.0.0-beta.3",
-    "gatsby-plugin-styled-components": "next",
-    "gatsby-remark-autolink-headers": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "javascript-time-ago": "^1.0.31",
+    "gatsby": "2.0.57",
+    "gatsby-plugin-google-analytics": "2.0.7",
+    "gatsby-plugin-react-helmet": "3.0.2",
+    "gatsby-plugin-sitemap": "^2.0.2",
+    "gatsby-plugin-styled-components": "3.0.3",
+    "gatsby-remark-autolink-headers": "2.0.11",
+    "gatsby-remark-prismjs": "3.1.0",
+    "gatsby-source-filesystem": "2.0.9",
+    "gatsby-transformer-remark": "2.1.13",
+    "javascript-time-ago": "^1.0.32",
     "prismjs": "^1.15.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^3.4.1",
-    "styled-components": "^3.4.2"
+    "react-markdown": "^4.0.3",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "babel-plugin-styled-components": "^1.5.1",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-yoctol": "^0.18.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.9.1",
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-yoctol": "^0.20.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^0.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.3.0",
-    "gh-pages": "^1.1.0",
-    "prettier": "^1.14.2"
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.15.2"
   },
   "homepage": "https://jigsawye.com",
   "keywords": [
